# website

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: cloudflare-pages.yml
accounts/: index.html
src/: app.rs  lib.rs  main.rs  pages.rs
src/components/: footer.rs  header.rs  target_blank_link.rs
src/css/: style.css  whatsnew-style.css
src/html/: whatsnew.html
src/pages/: home.rs  not_found.rs  status.rs
src/pages/works/: home.rs  ketcindy.rs
