[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
horrorshow = "0.8.4"

[dependencies]
stylist = { version = "0.13.0", features = ["yew_integration"] }
web-sys = { version = "0.3.70", features = ["Window", "ScrollToOptions", "ScrollBehavior"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
